--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						<nav id="nav">
 							<ul>
 								<li class="current"><a href="index.html">Home</a></li>
-								<li>
+								<!-- <li>
 									<a href="#">Dropdown</a>
 									<ul>
 										<li><a href="#">Lorem dolor</a></li>
@@ -48,8 +48,8 @@
 										</li>
 										<li><a href="#">Veroeros feugiat</a></li>
 									</ul>
-								</li>
-								<li><a href="left-sidebar.html">Left Sidebar</a></li>
+								</li> -->
+								<li><a href="left-sidebar.html">About</a></li>
 								<li><a href="right-sidebar.html">Right Sidebar</a></li>
 								<li><a href="two-sidebar.html">Two Sidebar</a></li>
 								<li><a href="no-sidebar.html">No Sidebar</a></li>
@@ -122,8 +122,70 @@
 					</div>
 				</section>
 
-			<!-- Gigantic Heading -->
+				<!-- Services -->
 				<section class="wrapper style2">
+					<div class="container">
+					<div style="text-align: center;"><h2>Services</h2></div>
+						<div class="row">
+							<section class="col-6 col-12-narrower">
+								<div class="box post">
+									<a href="#" class="image left"><img src="images/drinking_water.jpg" alt="" /></a>
+									<div class="inner">
+										<h3>Backflow Device Testing</h3>
+										<p style="text-align: justify;">
+											Our area, Nassau County in Long Island, NY, demands testing on a yearly basis to ensure water is safe to consume.
+											As a certified NYS backflow tester, I will ensure that your device is tested properly and submit all paperwork 
+											required by the county. Additionally, records of your test are safely kept in case you need a copy in the future.
+										</p>
+									</div>
+								</div>
+							</section>
+							<section class="col-6 col-12-narrower">
+								<div class="box post">
+									<a href="#" class="image left"><img src="images/water_bacteria.png" alt="" /></a>
+									<div class="inner">
+										<h3>Water Bacteria Test</h3>
+										<p style="text-align: justify;">
+											How clean and safe is your drinking water?
+											Although, public water is tested to ensure there is no coliform present, this does not guarantee that throught 
+											the process of serving your water there are contaminats that flow into your drinking water. <strong>I can help you find out 
+											if your drinking water contains coliform bacteria such as E. coli.</strong>
+										</p>
+									</div>
+								</div>
+							</section>
+						</div>
+						<!-- <div class="row">
+							<section class="col-6 col-12-narrower">
+								<div class="box post">
+									<a href="#" class="image left"><img src="images/water_faucet.jpg" alt="" /></a>
+									<div class="inner">
+										<h3>Commercial Testing</h3>
+										<p style="text-align: justify;">
+											Businesses that recently installed a backflow device or already contain a backflow device are <strong>responsible</strong>
+											to have their device tested by a certified NYS backflow tester like me. 
+										</p>
+									</div>
+								</div>
+							</section>
+							<section class="col-6 col-12-narrower">
+								<div class="box post">
+									<a href="#" class="image left"><img src="images/testing_gauge.jpg" alt="" /></a>
+									<div class="inner">
+										<h3>Testing Done Right</h3>
+										<p style="text-align: justify;">
+											Safeguarding the public water system is an essential part of my mission to protect public health.
+											By utilizing the most up-to-date techniques and equipment to perform backflow prevention tests.
+										</p>
+									</div>
+								</div>
+							</section>
+						</div> -->
+					</div>
+				</section>
+
+			<!-- Gigantic Heading -->
+				<section class="wrapper discount">
 					<div class="container">
 						<header class="major">
 							<h2><a href="#">New Customers Save <strong>10%</strong> When Scheduling your Appointment</a></h2>
@@ -133,24 +195,31 @@
 				</section>
 
 			<!-- Posts -->
-				<section class="wrapper style1">
+				<section class="wrapper style2">
 					<div class="container">
 						<div class="row">
 							<section class="col-6 col-12-narrower">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/pic01.jpg" alt="" /></a>
+									<a href="#" class="image left"><img src="images/drinking_water.jpg" alt="" /></a>
 									<div class="inner">
 										<h3>Residential Testing</h3>
-										<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+										<p style="text-align: justify;">
+											It's very important that house owners take responsibility in ensuring that their potable water is safe to use.
+											Performing a backflow test on a yearly basis will bring peace of mind knowing that the water beign consumed is safe 
+											from contaminants that may harm your family.
+										</p>
 									</div>
 								</div>
 							</section>
 							<section class="col-6 col-12-narrower">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="#" class="image left"><img src="images/testing.jpeg" alt="" /></a>
 									<div class="inner">
-										<h3>Testing Done Right</h3>
-										<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+										<h3>More on Backflow Device Testing</h3>
+										<p style="text-align: justify;">
+											As a home or business owner, you may not be aware of backflow prevention procedure. 
+											Click here, to know more about backflow, and how to prevent it from happening by testing it.
+										</p>
 									</div>
 								</div>
 							</section>
@@ -158,19 +227,25 @@
 						<div class="row">
 							<section class="col-6 col-12-narrower">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="#" class="image left"><img src="images/water_faucet.jpg" alt="" /></a>
 									<div class="inner">
 										<h3>Commercial Testing</h3>
-										<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+										<p style="text-align: justify;">
+											Businesses that recently installed a backflow device or already contain a backflow device are <strong>responsible</strong>
+											to have their device tested by a certified NYS backflow tester like me. 
+										</p>
 									</div>
 								</div>
 							</section>
 							<section class="col-6 col-12-narrower">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/pic04.jpg" alt="" /></a>
+									<a href="#" class="image left"><img src="images/testing_gauge.jpg" alt="" /></a>
 									<div class="inner">
-										<h3>More on Backflow Device Testing</h3>
-										<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+										<h3>Testing Done Right</h3>
+										<p style="text-align: justify;">
+											Safeguarding the public water system is an essential part of my mission to protect public health.
+											By utilizing the most up-to-date techniques and equipment to perform backflow prevention tests.
+										</p>
 									</div>
 								</div>
 							</section>
@@ -182,8 +257,10 @@
 				<section id="cta" class="wrapper style3">
 					<div class="container">
 						<header>
-							<h2>Are you ready to continue your quest?</h2>
-							<a href="#" class="button">Insert Coin</a>
+							<h2>Payment Methods Accepted</h2>
+							<img src="images/payment_methods.png" alt="" id="payment-img"/>
+							<!-- <h2>Call or Text: <a href="tel:516)324-4687"> (516) 324 - 4687</a></h2> -->
+							<!-- <a href="#" class="button">Insert Coin</a> -->
 						</header>
 					</div>
 				</section>
@@ -193,39 +270,39 @@
 					<div class="container">
 						<div class="row">
 							<section class="col-3 col-6-narrower col-12-mobilep">
-								<h3>Links to Stuff</h3>
+								<!-- <h3>Links to Stuff</h3> -->
 								<ul class="links">
-									<li><a href="#">Mattis et quis rutrum</a></li>
-									<li><a href="#">Suspendisse amet varius</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum accumsan dolor</a></li>
-									<li><a href="#">Mattis rutrum accumsan</a></li>
-									<li><a href="#">Suspendisse varius nibh</a></li>
-									<li><a href="#">Sed et dapibus mattis</a></li>
+									<li><a href="#">Home</a></li>
+									<li><a href="#">About Me</a></li>
+									<li><a href="#">Contact</a></li>
+									<li><a href="#">Schedule an Appointment</a></li>
+									<li><a href="#">FAQ</a></li>
 								</ul>
 							</section>
 							<section class="col-3 col-6-narrower col-12-mobilep">
-								<h3>More Links to Stuff</h3>
+								<!-- <h3>More Links to Stuff</h3> -->
 								<ul class="links">
-									<li><a href="#">Duis neque nisi dapibus</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum accumsan sed</a></li>
-									<li><a href="#">Mattis et sed accumsan</a></li>
-									<li><a href="#">Duis neque nisi sed</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum amet varius</a></li>
+									<li><i class="fas fa-envelope-square"></i><span style="font-size: medium; padding-left: 10px;"><a href="mailto:backflowfriends@gmail.com">backflowfriends@gmail.com</a></span></li>
+									<li><i class="fas fa-phone-alt"></i><span style="font-size: medium; padding-left: 10px;"><a href="tel:516)324-4687"> (516) 324 - 4687</a></span></li>
 								</ul>
 							</section>
 							<section class="col-6 col-12-narrower">
 								<h3>Get In Touch</h3>
+								<p >
+									Devoted to service my community and ensure your water is safe to drink.
+									Offering reliable and affordable backflow testing prices!</p>
 								<form>
 									<div class="row gtr-50">
 										<div class="col-6 col-12-mobilep">
-											<input type="text" name="name" id="name" placeholder="Name" />
+											<input type="text" name="name" id="name" placeholder="Name*" required/>
 										</div>
 										<div class="col-6 col-12-mobilep">
-											<input type="email" name="email" id="email" placeholder="Email" />
+											<input type="email" name="email" id="email" placeholder="Email*" required/>
 										</div>
+										<!-- <div class="col-6 col-12-mobilep">
+											<p style="margin: auto;">Appointment Date</p>
+											<input type="date" name="calendar" id="calendar" placeholder="Date" />
+										</div> -->
 										<div class="col-12">
 											<textarea name="message" id="message" placeholder="Message" rows="5"></textarea>
 										</div>
