--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -6,9 +6,10 @@
 -->
 <html>
 	<head>
-		<title>Left Sidebar - Arcana by HTML5 UP</title>
+		<title>Backflow Testing by Carlos Beltran</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<script src="https://kit.fontawesome.com/815e9e56d3.js" crossorigin="anonymous"></script>
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
@@ -18,7 +19,7 @@
 				<div id="header">
 
 					<!-- Logo -->
-						<h1><a href="index.html" id="logo">Arcana <em>by HTML5 UP</em></a></h1>
+						<h1><a href="index.html" id="logo">NYS Certified Backflow Tester  </span> <i class="fas fa-user-check" style="color: darkgreen;"></i></a></h1>
 
 					<!-- Nav -->
 						<nav id="nav">
@@ -43,7 +44,7 @@
 										<li><a href="#">Veroeros feugiat</a></li>
 									</ul>
 								</li>
-								<li class="current"><a href="left-sidebar.html">Left Sidebar</a></li>
+								<li class="current"><a href="left-sidebar.html">About</a></li>
 								<li><a href="right-sidebar.html">Right Sidebar</a></li>
 								<li><a href="two-sidebar.html">Two Sidebar</a></li>
 								<li><a href="no-sidebar.html">No Sidebar</a></li>
@@ -56,13 +57,13 @@
 				<section class="wrapper style1">
 					<div class="container">
 						<div class="row gtr-200">
-							<div class="col-4 col-12-narrower">
+							<div class="col-4 col-12-narrower" id="left-side-form">
 								<div id="sidebar">
 
 									<!-- Sidebar -->
 
 										<section>
-											<h3>Just a Subheading</h3>
+											<!-- <h3>Just a Subheading</h3>
 											<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
 											Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
 											Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis et nisi etiam.</p>
@@ -83,7 +84,10 @@
 											</ul>
 											<footer>
 												<a href="#" class="button">More Random Links</a>
-											</footer>
+											</footer> -->
+
+											<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScXQ5LzYydj3ujc8DNrO15bWWXbqMwx41LnCSuL7825_cQOjg/viewform?embedded=true" width="640" height="1200" frameborder="0" marginheight="0" marginwidth="0" style="width: -webkit-fill-available;">Loading…</iframe>
+
 										</section>
 
 								</div>
@@ -95,35 +99,38 @@
 
 										<article>
 											<header>
-												<h2>Left Sidebar</h2>
-												<p>Sidebar on the left, content on the right.</p>
+												<h2>About Me</h2>
+												<!-- <p>Sidebar on the left, content on the right.</p> -->
 											</header>
 
 											<span class="image featured"><img src="images/banner.jpg" alt="" /></span>
 
-											<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-											Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-											Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-											consequat etiam lorem ipsum dolor sit amet nullam.</p>
+											<p style="text-align: justify;">
+												I am a resident of Nassau County, Long Island. I love my community and I look forward to making it a better place.
+												I graduated from Queens College with a bachelors in computer science. As an engineer, I look into ways to make things
+												work, work smarter utilizing technology. Becoming a backflow tester has allowed to learn more about the water service industry.
+												Every test I perform, I carefully analyze the situation and record the procedure data. This data will be used to improve 
+												the testing process to better assist customers and provide excellent service.
+											</p>
 
-											<h3>And Yet Another Subheading</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam risus, at tempus
-											justo. Sed dictum rutrum massa eu volutpat. Quisque vitae hendrerit sem. Pellentesque lorem felis,
-											ultricies a bibendum id, bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet
-											vulputate. Nulla quis nibh ipsum, sed egestas justo. Morbi ut ante mattis orci convallis tempor.
-											Etiam a lacus a lacus pharetra porttitor quis accumsan odio. Sed vel euismod nisi. Etiam convallis
-											rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien.
-											Donec sagittis massa et leo semper a scelerisque metus faucibus. Morbi congue mattis mi.
-											Phasellus sed nisl vitae risus tristique volutpat. Cras rutrum commodo luctus.</p>
+											<h3>Self study and Research</h3>
+											<p style="text-align: justify;">
+												I was taught that when trying to provide a service one does not only need to learn the job but also study the field one is going in.
+												I've taken the time to research how the componets of a backflow device work, the best testing equipment, and most importantly what are 
+												the risks that run when a backflow device is malfunctioning. <strong>WRITE MEDIUM ARTICLE about bakflow</strong> 
+											</p>
 
-											<p>Phasellus odio risus, faucibus et viverra vitae, eleifend ac purus. Praesent mattis, enim
-											quis hendrerit porttitor, sapien tortor viverra magna, sit amet rhoncus nisl lacus nec arcu.
-											Suspendisse laoreet metus ut metus imperdiet interdum aliquam justo tincidunt. Mauris dolor urna,
-											fringilla vel malesuada ac, dignissim eu mi. Praesent mollis massa ac nulla pretium pretium.
-											Maecenas tortor mauris, consectetur pellentesque dapibus eget, tincidunt vitae arcu.
-											Vestibulum purus augue, tincidunt sit amet iaculis id, porta eu purus.</p>
+											<p style="text-align: justify;">
+												Additionally, I offer a service no other competitors of my field offer, that is, <strong>testing to identify coliform bacteria such as E. coli.</strong> 
+												If you have children or planning to, it is very important that you perform such tests in a yearly basis or as often as you prefer to ensure the water
+												you are consuming is bacteria free. <strong>MEDIUM ARticle bacteria and water testing</strong>
+											</p>
+
+											<p style="text-align: justify;">
+												Lastly, did you know that NYS offers <strong>FREE</strong> lead testing to residential property owners? If you didnt I higly advise you to <a href="#">contact me</a> that way I can help you
+												obtain your <strong>FREE</strong> lead testing kit.
+											</p>
 										</article>
-
 								</div>
 							</div>
 						</div>
