--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 									</ul>
 								</li> -->
 								<li><a href="left-sidebar.html">About</a></li>
-								<li><a href="right-sidebar.html">Right Sidebar</a></li>
+								<li><a href="right-sidebar.html">Services</a></li>
 								<li><a href="two-sidebar.html">Two Sidebar</a></li>
 								<li><a href="no-sidebar.html">No Sidebar</a></li>
 							</ul>
@@ -84,7 +84,7 @@
 			<!-- Highlights -->
 				<section class="wrapper style1">
 					<div class="container">
-						<h2 style="text-align: center;">Providing Excellent Service to <br> Commercial & Residential Buildings</h2>
+						<h2 style="text-align: center;">Providing Excellent Service to <br> All Homeowners of Nassau County</h2>
 						<div class="row gtr-200">
 							<section class="col-4 col-12-narrower">
 								<div class="box highlight">
@@ -101,7 +101,7 @@
 									<i class="icon solid major fa-dollar-sign"></i>
 									<h3>Budget Friendly</h3>
 									<p style="text-align: justify;">
-										Offering competitive pricing to all customers of Long Island.
+										Offering competitive pricing to all customers of Nassau County, Long Island.
 										Take advantage now and click on this <a href="#" style="font-weight: bold;">COUPON</a>
 										for additional discounts!
 									</p>
@@ -204,7 +204,7 @@
 									<div class="inner">
 										<h3>Residential Testing</h3>
 										<p style="text-align: justify;">
-											It's very important that house owners take responsibility in ensuring that their potable water is safe to use.
+											It's very important that house owners take <strong>serious responsibility</strong> in ensuring that their potable water is safe to use.
 											Performing a backflow test on a yearly basis will bring peace of mind knowing that the water beign consumed is safe 
 											from contaminants that may harm your family.
 										</p>
@@ -215,10 +215,10 @@
 								<div class="box post">
 									<a href="#" class="image left"><img src="images/testing.jpeg" alt="" /></a>
 									<div class="inner">
-										<h3>More on Backflow Device Testing</h3>
+										<h3>More about Backflow Testing</h3>
 										<p style="text-align: justify;">
-											As a home or business owner, you may not be aware of backflow prevention procedure. 
-											Click here, to know more about backflow, and how to prevent it from happening by testing it.
+											As a home or business owner, you may not be aware of backflow prevention procedures. 
+											Click here, to learn more about backflow, and how to prevent it.
 										</p>
 									</div>
 								</div>
