--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -9,8 +9,8 @@
 		<title>Backflow Testing by Carlos Beltran</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<script src="https://kit.fontawesome.com/815e9e56d3.js" crossorigin="anonymous"></script>
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<script src="https://kit.fontawesome.com/815e9e56d3.js" crossorigin="anonymous"></script>
 	</head>
 	<body class="is-preload">
 		<div id="page-wrapper">
@@ -45,7 +45,7 @@
 									</ul>
 								</li>
 								<li class="current"><a href="left-sidebar.html">About</a></li>
-								<li><a href="right-sidebar.html">Right Sidebar</a></li>
+								<li><a href="right-sidebar.html">Services</a></li>
 								<li><a href="two-sidebar.html">Two Sidebar</a></li>
 								<li><a href="no-sidebar.html">No Sidebar</a></li>
 							</ul>
@@ -116,7 +116,7 @@
 											<h3>Self study and Research</h3>
 											<p style="text-align: justify;">
 												I was taught that when trying to provide a service one does not only need to learn the job but also study the field one is going in.
-												I've taken the time to research how the componets of a backflow device work, the best testing equipment, and most importantly what are 
+												I've taken the time to research how the componets of a backflow device work, the proper testing equipment, and most importantly what are 
 												the risks that run when a backflow device is malfunctioning. <strong>WRITE MEDIUM ARTICLE about bakflow</strong> 
 											</p>
 
