--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 										<li><a href="#">Veroeros feugiat</a></li>
 									</ul>
 								</li> -->
-								<li><a href="left-sidebar.html">About</a></li>
-								<li><a href="right-sidebar.html">Services</a></li>
-								<li><a href="two-sidebar.html">Two Sidebar</a></li>
+								<li><a href="about.html">About</a></li>
+								<li><a href="services.html">Services</a></li>
+								<li><a href="resources.html">Two Sidebar</a></li>
 								<li><a href="no-sidebar.html">No Sidebar</a></li>
 							</ul>
 						</nav>
