--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -43,9 +43,9 @@
 										<li><a href="#">Veroeros feugiat</a></li>
 									</ul>
 								</li>
-								<li><a href="left-sidebar.html">Left Sidebar</a></li>
-								<li><a href="right-sidebar.html">Right Sidebar</a></li>
-								<li><a href="two-sidebar.html">Two Sidebar</a></li>
+								<li><a href="about.html">Left Sidebar</a></li>
+								<li><a href="services.html">Right Sidebar</a></li>
+								<li><a href="resources.html">Two Sidebar</a></li>
 								<li class="current"><a href="no-sidebar.html">No Sidebar</a></li>
 							</ul>
 						</nav>
