--- a/resources.html
+++ b/resources.html
@@ -100,14 +100,14 @@
 										</section>
 
 										<section>
-											<h3>Another Subheading</h3>
+											<h3>More Helpful Links</h3>
 											<ul class="links">
-												<li><a href="#">Amet turpis, feugiat sit amet</a></li>
-												<li><a href="#">Ornare in hendrerit lectus</a></li>
-												<li><a href="#">Semper mod quis eget dolore</a></li>
-												<li><a href="#">Consequat lorem phasellus</a></li>
-												<li><a href="#">Amet turpis feugiat amet</a></li>
-												<li><a href="#">Semper mod quisturpis nisi</a></li>
+												<li><a href="https://www.health.ny.gov/environmental/water/drinking/lead/free_lead_testing_pilot_program.htm" target="_blank">NYS Free Lead Testing</a></li>
+												<li><a href="https://en.wikipedia.org/wiki/Backflow_prevention_device" target="_blank">Backflow Prevention Device</a></li>
+												<li><a href="https://en.wikipedia.org/wiki/Air_gap_(plumbing)" target="_blank">What's an Air Gap?</a></li>
+												<li><a href="https://en.wikipedia.org/wiki/Double_check_valve" target="_blank">What's a DCA?</a></li>
+												<li><a href="https://en.wikipedia.org/wiki/Reduced_pressure_zone_device" target="_blank">What's an RPZ?</a></li>
+												<li><a href="https://www.youtube.com/watch?v=IXBCrJ7uCkk" target="_blank">Public Water Safety Video</a></li>
 											</ul>
 											<footer>
 												<a href="#" class="button">More Random Links</a>
@@ -129,9 +129,20 @@
 
 											<!-- <span class="image featured"><img src="images/banner.jpg" alt="" /></span> -->
 											
+											<button class="accordion">What are my responsibilites?</button>
+											<div class="panel">
+												<p>
+													Given the serious health hazards that may arise from backflow (Category 5 backflow may contain human waste and poses serious risk to the water mainstream),
+													in 1992 New York began requiring building owners to install Backflow Prevention Devices, under <a href="assets/files/nys-cross-control-code.pdf" target="_blank">NYS Sanitary Code 5-1.31</a>.
+													Since the device’s valve is open most of the time to allow for regular flow, dirt and debris may get in and cause a malfunction when the system is needed most. In addition to having a backflow preventer installed,
+													your responsibility is therefore to have it inspected and tested annually, and have it maintained in good working order.
+												</p>
+											</div>
+
 											<button class="accordion">What is backflow?</button>
 											<div class="panel">
-												<p>There are two types of backflow, back pressure and back siphonage backflow.
+												<p>
+													There are two types of backflow, back pressure and back siphonage backflow.
 													This can occur when changes in water pressure create a suction effect, which can cause water to reverse flow—to backflow into the public supply.
 													Without barriers to prevent this, water from private plumbing systems, including industrial plants, pools, and medical facilities, could flow into our public system and impact water quality.
 												</p>
@@ -139,13 +150,74 @@
 
 											<button class="accordion">I don't have a backflow device, am I at risk?</button>
 											<div class="panel">
-												<p> The short answer to that is it depends. There are five different categories to determine the degree of hazard, 
+												<p> 
+													The short answer to that is it depends. There are five different categories to determine the degree of hazard, 
 													each representing an increasingly high level of health risk. Category 1 backflow is normal drinking water, and poses no risk, whereas category 5 backflow may contain human waste and is a serious risk. 
 													Installing a backflow preventer and keeping in good working condition will keep your water as safe as possible. 
 												</p>
 											</div>
 
-											<h3>And Yet Another Subheading</h3>
+											<button class="accordion">What is a cross-connection?</button>
+											<div class="panel">
+												<p> 
+													A cross connection is a link between a potable water system and a non-potable water system, in our case,
+													Nassau County's public water lines and our customers’ private plumbing systems. Backflow can occur through cross connections. 
+												</p>
+											</div>
+
+											<button class="accordion">How do I know if I need to install a backflow preventer?</button>
+											<div class="panel">
+												<p>
+													Residential customers are only required to install a backflow preventer if the home has an in-ground irrigation system or pool. 
+													It is the customer's responsibility to notify us if an irrigation system or pool is installed.
+													Backflow requirements vary for commercial customers based on the business's water use and it's degree of hazard.
+												</p>
+											</div>
+
+											<button class="accordion">What happens if my backflow preventer fails the test?</button>
+											<div class="panel">
+												<p>
+													If the test fails, the tester is trained to identify the failed component in the device. It is crucial that the device failure is addressed
+													immediately to avoid any backflow contamination. In this case the tester or a license plumber may repair or replace the backflow preventer.
+												</p>
+											</div>
+
+											<button class="accordion">How is a backflow test done?</button>
+											<div class="panel">
+												<p>
+													A certified NYS backflow tester will begin by inspecting the device for any alterations, then it will proceed to shutdown the water for several minutes
+													<strong>(Yes, your water will be interrupted for a short period of time)</strong>. Next, the tester reads the pressure of the system by attaching the backflow testing gauge, 
+													otherwise known as gate and relief valves. The tester will close the downstream valve and wait a few minutes before checking for changes in the direction of 
+													movement of the pressure gauge as well as simultaneously check for water leaks and other obvious signs by closing different valves.
+												</p>
+											</div>
+
+											<button class="accordion">How often do I have to test my backflow prevention device?</button>
+											<div class="panel">
+												<p>
+													Backflow prevention devices need to be tested annually, at a minimum. In addition to this baseline services, the device will need to be tested whenever
+													it has been serviced for any reason, and immediately after it has been installed.
+												</p>
+											</div>
+
+											<button class="accordion" style="font: -webkit-mini-control; font-weight: bold;">How has COVID-19 stay at home orders changed the backflow prevention program?</button>
+											<div class="panel">
+												<p>
+													Most assemblies can be tested without customer interaction and therefore are safe to perform with the COVID-19 recommendations for social distancing. 
+													In the event customer interaction is needed due to the location of your backflow device, I recommend to notify me prior to arrival and comply with the latest social distancing guidance related to COVID-19.  
+													Lastly, Please feel free to call/message for any questions, also know that I have taken both moderna vaccines.
+												</p>
+											</div>
+
+											<button class="accordion">Can you remind me when is time to test?</button>
+											<div class="panel">
+												<p>
+													Absolutely! Part of my job is to take this burden off your shoulders. Utilizing a secure cloud reminder system, you will receive automatic email and text reminders of your upcoming test.
+													Additionally, you may also be provided with discount coupons as part of this free service.
+												</p>
+											</div>
+
+											<!-- <h3>And Yet Another Subheading</h3>
 											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam risus, at tempus
 											justo. Sed dictum rutrum massa eu volutpat. Quisque vitae hendrerit sem. Pellentesque lorem felis,
 											ultricies a bibendum id, bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet
@@ -157,7 +229,7 @@
 											quis hendrerit porttitor, sapien tortor viverra magna, sit amet rhoncus nisl lacus nec arcu.
 											Maecenas tortor mauris, consectetur pellentesque dapibus eget, tincidunt vitae arcu.
 											Vestibulum purus augue, tincidunt sit amet iaculis id, porta eu purus.</p>
-										</article>
+										</article> -->
 
 								</div>
 							</div>
@@ -167,17 +239,17 @@
 									<!-- Sidebar 2 -->
 
 										<section>
-											<h3>Another Subheading</h3>
+											<h3>Resource Links</h3>
 											<ul class="links">
-												<li><a href="#">Amet turpis, feugiat sit amet</a></li>
-												<li><a href="#">Ornare in hendrerit lectus</a></li>
-												<li><a href="#">Semper mod quis eget dolore</a></li>
-												<li><a href="#">Consequat lorem phasellus</a></li>
-												<li><a href="#">Amet turpis feugiat amet</a></li>
-												<li><a href="#">Semper mod quisturpis nisi</a></li>
+												<li><a href="assets/files/nys-cross-control-code.pdf" target="_blank">NYS Sanitary Code 5-1.31</a></li>
+												<li><a href="https://www.arcgis.com/apps/PublicInformation/index.html?appid=b4d949fbec114dc8b7b5a797f51da63d&wmode=opaque" target="_blank">Long Island Water Districts</a></li>
+												<li><a href="assets/files/faqs.pdf" target="_blank">More FAQs</a></li>
+												<li><a href="https://www1.nyc.gov/site/dep/about/cross-connection-controls.page" target="_blank"><span style="font-size: 15px;">NYC Cross-Connection Control</span></a></li>
+												<li><a href="https://fccchr.usc.edu/list.html">FCCCHR Assembly List</a></li>
+												<li><a href="https://www.health.ny.gov/forms/doh-1013.pdf" target="_blank">DOH 1013 Form</a></li>
 											</ul>
 											<footer>
-												<a href="#" class="button">More Random Links</a>
+												<a href="#" class="button"><span style="font-size: small;">Schedule An Appointment</span></a>
 											</footer>
 										</section>
 
