--- a/services.html
+++ b/services.html
@@ -46,7 +46,7 @@
 								</li> -->
 								<li><a href="about.html">About</a></li>
 								<li class="current"><a href="services.html">Services</a></li>
-								<li><a href="resources.html">Two Sidebar</a></li>
+								<li><a href="resources.html">Resources</a></li>
 								<li><a href="no-sidebar.html">No Sidebar</a></li>
 							</ul>
 						</nav>
