--- a/resources.html
+++ b/resources.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Two Sidebar - Arcana by HTML5 UP</title>
+		<title>Backflow Testing by Carlos Beltran</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -74,7 +74,8 @@
 								<li><a href="about.html">About</a></li>
 								<li><a href="services.html">Services</a></li>
 								<li class="current"><a href="resources.html">Resources</a></li>
-								<li><a href="no-sidebar.html">No Sidebar</a></li>
+								<li><a href="contact.html">Contact</a></li>
+								<li><a href="appointment.html">Schedule an Appointment</a></li>
 							</ul>
 						</nav>
 
@@ -89,7 +90,7 @@
 
 									<!-- Sidebar 1 -->
 
-										<section>
+										<!-- <section>
 											<h3>Just a Subheading</h3>
 											<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
 											Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
@@ -97,7 +98,7 @@
 											<footer>
 												<a href="#" class="button">Continue Reading</a>
 											</footer>
-										</section>
+										</section> -->
 
 										<section>
 											<h3>More Helpful Links</h3>
@@ -109,9 +110,9 @@
 												<li><a href="https://en.wikipedia.org/wiki/Reduced_pressure_zone_device" target="_blank">What's an RPZ?</a></li>
 												<li><a href="https://www.youtube.com/watch?v=IXBCrJ7uCkk" target="_blank">Public Water Safety Video</a></li>
 											</ul>
-											<footer>
+											<!-- <footer>
 												<a href="#" class="button">More Random Links</a>
-											</footer>
+											</footer> -->
 										</section>
 
 								</div>
@@ -253,7 +254,7 @@
 											</footer>
 										</section>
 
-										<section>
+										<!-- <section>
 											<h3>Just a Subheading</h3>
 											<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
 											Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
@@ -261,7 +262,7 @@
 											<footer>
 												<a href="#" class="button">Continue Reading</a>
 											</footer>
-										</section>
+										</section> -->
 
 								</div>
 							</div>
@@ -270,57 +271,56 @@
 				</section>
 
 			<!-- Footer -->
-				<div id="footer">
-					<div class="container">
-						<div class="row">
-							<section class="col-3 col-6-narrower col-12-mobilep">
-								<h3>Links to Stuff</h3>
-								<ul class="links">
-									<li><a href="#">Mattis et quis rutrum</a></li>
-									<li><a href="#">Suspendisse amet varius</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum accumsan dolor</a></li>
-									<li><a href="#">Mattis rutrum accumsan</a></li>
-									<li><a href="#">Suspendisse varius nibh</a></li>
-									<li><a href="#">Sed et dapibus mattis</a></li>
-								</ul>
-							</section>
-							<section class="col-3 col-6-narrower col-12-mobilep">
-								<h3>More Links to Stuff</h3>
-								<ul class="links">
-									<li><a href="#">Duis neque nisi dapibus</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum accumsan sed</a></li>
-									<li><a href="#">Mattis et sed accumsan</a></li>
-									<li><a href="#">Duis neque nisi sed</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum amet varius</a></li>
-								</ul>
-							</section>
-							<section class="col-6 col-12-narrower">
-								<h3>Get In Touch</h3>
-								<form>
-									<div class="row gtr-50">
-										<div class="col-6 col-12-mobilep">
-											<input type="text" name="name" id="name" placeholder="Name" />
-										</div>
-										<div class="col-6 col-12-mobilep">
-											<input type="email" name="email" id="email" placeholder="Email" />
-										</div>
-										<div class="col-12">
-											<textarea name="message" id="message" placeholder="Message" rows="5"></textarea>
-										</div>
-										<div class="col-12">
-											<ul class="actions">
-												<li><input type="submit" class="button alt" value="Send Message" /></li>
-											</ul>
-										</div>
+			<div id="footer">
+				<div class="container">
+					<div class="row">
+						<section class="col-3 col-6-narrower col-12-mobilep">
+							<!-- <h3>Links to Stuff</h3> -->
+							<ul class="links">
+								<li><a href="#">Home</a></li>
+								<li><a href="about.html">About Me</a></li>
+								<li><a href="#">Contact</a></li>
+								<li><a href="#">Schedule an Appointment</a></li>
+								<li><a href="resources.html">FAQ</a></li>
+							</ul>
+						</section>
+						<section class="col-3 col-6-narrower col-12-mobilep">
+							<!-- <h3>More Links to Stuff</h3> -->
+							<ul class="links">
+								<li><i class="fas fa-envelope-square"></i><span style="font-size: medium; padding-left: 10px;"><a href="mailto:backflowfriends@gmail.com">backflowfriends@gmail.com</a></span></li>
+								<li><i class="fas fa-phone-alt"></i><span style="font-size: medium; padding-left: 10px;"><a href="tel:516)324-4687"> (516) 324 - 4687</a></span></li>
+							</ul>
+						</section>
+						<section class="col-6 col-12-narrower">
+							<h3>Get In Touch</h3>
+							<p >
+								Devoted to service my community and ensure your water is safe to drink.
+								Offering reliable and affordable backflow testing prices!</p>
+							<form>
+								<div class="row gtr-50">
+									<div class="col-6 col-12-mobilep">
+										<input type="text" name="name" id="name" placeholder="Name*" required/>
 									</div>
-								</form>
-							</section>
-						</div>
+									<div class="col-6 col-12-mobilep">
+										<input type="email" name="email" id="email" placeholder="Email*" required/>
+									</div>
+									<!-- <div class="col-6 col-12-mobilep">
+										<p style="margin: auto;">Appointment Date</p>
+										<input type="date" name="calendar" id="calendar" placeholder="Date" />
+									</div> -->
+									<div class="col-12">
+										<textarea name="message" id="message" placeholder="Message" rows="5"></textarea>
+									</div>
+									<div class="col-12">
+										<ul class="actions">
+											<li><input type="submit" class="button alt" value="Send Message" /></li>
+										</ul>
+									</div>
+								</div>
+							</form>
+						</section>
 					</div>
-
+				</div>
 					<!-- Icons -->
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
