--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
 								</li> -->
 								<li><a href="about.html">About</a></li>
 								<li><a href="services.html">Services</a></li>
-								<li><a href="resources.html">Two Sidebar</a></li>
-								<li><a href="no-sidebar.html">No Sidebar</a></li>
+								<li><a href="resources.html">Resources</a></li>
+								<li><a href="contact.html">Contact</a></li>
+								<li><a href="appointment.html">Schedule an Appointment</a></li>
 							</ul>
 						</nav>
 
@@ -273,10 +274,10 @@
 								<!-- <h3>Links to Stuff</h3> -->
 								<ul class="links">
 									<li><a href="#">Home</a></li>
-									<li><a href="#">About Me</a></li>
+									<li><a href="about.html">About Me</a></li>
 									<li><a href="#">Contact</a></li>
 									<li><a href="#">Schedule an Appointment</a></li>
-									<li><a href="#">FAQ</a></li>
+									<li><a href="resources.html">FAQ</a></li>
 								</ul>
 							</section>
 							<section class="col-3 col-6-narrower col-12-mobilep">
